compiler/tests/liva/errors/e2000_parse_error.liva
// Error Test: E2000 — Parse error (missing closing brace)
// EXPECT: E2000
main() {
    let x = 10
    print(x)
